traefic/3-middle-ware/1-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-add-prefix
spec:
  addPrefix:
    prefix: /hello
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.example.com`)
      kind: Rule
      services:
        - name: nginx-deploy-green
          port: 80

    - match: Host(`nginx.example.org`)
      kind: Rule
      middlewares:
        - name: nginx-add-prefix
      services:
        - name: nginx-deploy-green
          port: 80
