traefic/3-middle-ware/2-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-strip-path-prefix
spec:
  stripPrefix:
    prefixes:
      - /blue
      - /green

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.example.com`)
      kind: Rule
      services:
        - name: nginx-deploy-main
          port: 80

    - match: Host(`nginx.example.com`) && Path(`/blue`)
      kind: Rule
      middlewares:
        - name: nginx-strip-path-prefix
      services:
        - name: nginx-deploy-blue
          port: 80

    - match: Host(`nginx.example.com`) && Path(`/green`)
      kind: Rule
      middlewares:
        - name: nginx-strip-path-prefix
      services:
        - name: nginx-deploy-green
          port: 80
